apps/loki/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: loki
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: loki
    homelab.local/OwnedBy: ElPoshoX
